[gd_scene load_steps=5 format=3 uid="uid://bc15ty5npswib"]

[ext_resource type="Script" path="res://scripts/wave_part.gd" id="1_aqe8p"]

[sub_resource type="Gradient" id="Gradient_r4hua"]
colors = PackedColorArray(0.607843, 0.890196, 1, 1, 0.00784314, 0.533333, 0.819608, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6xyiv"]
gradient = SubResource("Gradient_r4hua")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7ifum"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 60.0
initial_velocity_min = 80.0
initial_velocity_max = 120.0
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_6xyiv")
turbulence_enabled = true

[node name="WavePart" type="RigidBody2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
collision_layer = 2
freeze = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_aqe8p")

[node name="Splash" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_7ifum")
lifetime = 0.35
one_shot = true
explosiveness = 1.0
randomness = 0.4

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
